Remove heights to avoid project overlapping
Remove unneccesary height properties to avoid overlapping with long
project descriptions. Credit to Santhosh for the suggestion in
https://phabricator.wikimedia.org/T385413#10527629

Bug: T385413

--- a/src/wikimedia.org/assets/postcss/_wikimedia-custom.css
+++ b/src/wikimedia.org/assets/postcss/_wikimedia-custom.css
@@ -246,7 +246,6 @@ body {
 
 .project-wrapper {
 	width: 230px;
-	height: var( --size-300 );
 	margin: var( --spacing-150 ) var( --spacing-35 );
 	display: flex;
 	flex-direction: row;
@@ -254,7 +253,6 @@ body {
 
 .project-block {
 	width: 170px;
-	height: var( --size-300 );
 	margin: var( --spacing-25 );
 	margin-left: var( --spacing-75 );
 }
